--- a/wp-content/themes/nbaholics/assets/styles/core.scss
+++ b/wp-content/themes/nbaholics/assets/styles/core.scss
@@ -38,7 +38,7 @@ License: GNU General Public License v2 or later
 //@import "../../../../../../bootstrap/scss/custom-forms";
 @import "../../../../../../bootstrap/scss/nav";
 @import "../../../../../../bootstrap/scss/navbar";
-//@import "../../../../../../bootstrap/scss/card";
+@import "../../../../../../bootstrap/scss/card";
 //@import "../../../../../../bootstrap/scss/breadcrumb";
 @import "../../../../../../bootstrap/scss/pagination";
 //@import "../../../../../../bootstrap/scss/badge";
@@ -60,32 +60,170 @@ License: GNU General Public License v2 or later
 .logo{
   width: 50px;
 }
-.nav-link{
-  color: #fff!important;
-  line-height: 50px;
-  height: 50px;
+.navbar-dark .navbar-nav .nav-link{
+   color: #fff!important;
+ }
+.navbar-dark .navbar-nav .nav-link:hover{
+  color: rgba(255,255,255,0.5);
 }
-.nav-link-widget{
-  line-height: 30px;
-  height: 20x;
-  color: #000e14!important;
-}
-.nav-link-widget:hover{
-  border: #0e1114;
-  border: 1px;
-}
-#teamnav li{
-  list-style: none;
-  float: left;
-  padding-left: 3px;
-  width: 65px;
-}
-#teamnav li a{
-  text-decoration: none;
-  border: none;
+.pills{
+  line-height: 30px!important;
+  height: 30x!important;
 }
 ol.carousel-indicators li,
 ol.carousel-indicators li.active {
   width: 45px;
+}
 
+/*Slider*/
+.carousel-control-prev i{
+  text-shadow: 1px 1px 1px #ccc;
+  font-size: 50px;
+  position: absolute;
+  left: 5%;
+  color: black;
+}
+.carousel-control-next i{
+  text-shadow: 1px 1px 1px #ccc;
+  font-size: 50px;
+  position: absolute;
+  right: 5%;
+  color: black;
+}
+.card{
+  width: 100%;
+  height: 8vw;
+}
+#carousel-example .carousel-inner>.item {
+  -webkit-transition: -webkit-transform 1.2s ease-in-out !important;
+  -o-transition: -o-transform 1.2s ease-in-out !important;
+  transition: transform 1.2s ease-in-out !important;
+}
+
+@media (min-width: 768px) and (max-width: 991px) {
+  /* Show 4th slide on md if col-md-4*/
+  .carousel-inner .active.col-md-4.carousel-item + .carousel-item + .carousel-item + .carousel-item {
+    position: absolute;
+    top: 0;
+    right: -33.3333%;  /*change this with javascript in the future*/
+    z-index: -1;
+    display: block;
+    visibility: visible;
+  }
+}
+@media (min-width: 576px) and (max-width: 768px) {
+  /* Show 3rd slide on sm if col-sm-6*/
+  #carousel-example .carousel-inner .active.col-sm-6.carousel-item + .carousel-item + .carousel-item {
+    position: absolute;
+    top: 0;
+    right: -50%;  /*change this with javascript in the future*/
+    z-index: -1;
+    display: block;
+    visibility: visible;
+  }
+}
+@media (min-width: 576px) {
+  #carousel-example .carousel-item {
+    margin-right: 0;
+  }
+  /* show 2 items */
+  #carousel-example .carousel-inner .active + .carousel-item {
+    display: block;
+  }
+  #carousel-example .carousel-inner .carousel-item.active:not(.carousel-item-right):not(.carousel-item-left),
+  #carousel-example .carousel-inner .carousel-item.active:not(.carousel-item-right):not(.carousel-item-left) + .carousel-item {
+    transition: none;
+  }
+  #carousel-example .carousel-inner .carousel-item-next {
+    position: relative;
+    transform: translate3d(0, 0, 0);
+  }
+  /* left or forward direction */
+  #carousel-example .active.carousel-item-left + .carousel-item-next.carousel-item-left,
+  .carousel-item-next.carousel-item-left + .carousel-item,
+  .carousel-item-next.carousel-item-left + .carousel-item + .carousel-item {
+    position: relative;
+    transform: translate3d(-100%, 0, 0);
+    visibility: visible;
+  }
+  /* farthest right hidden item must be also positioned for animations */
+  #carousel-example .carousel-inner .carousel-item-prev.carousel-item-right {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    display: block;
+    visibility: visible;
+  }
+  /* right or prev direction */
+  #carousel-example .active.carousel-item-right + .carousel-item-prev.carousel-item-right,
+  .carousel-item-prev.carousel-item-right + .carousel-item,
+  .carousel-item-prev.carousel-item-right + .carousel-item + .carousel-item {
+    position: relative;
+    transform: translate3d(100%, 0, 0);
+    visibility: visible;
+    display: block;
+    visibility: visible;
+  }
+}
+/* MD */
+@media (min-width: 768px) {
+  /* show 3rd of 3 item slide */
+  #carousel-example .carousel-inner .active + .carousel-item + .carousel-item {
+    display: block;
+  }
+  #carousel-example .carousel-inner .carousel-item.active:not(.carousel-item-right):not(.carousel-item-left) + .carousel-item + .carousel-item {
+    transition: none;
+  }
+  #carousel-example .carousel-inner .carousel-item-next {
+    position: relative;
+    transform: translate3d(0, 0, 0);
+  }
+  /* left or forward direction */
+  #carousel-example .carousel-item-next.carousel-item-left + .carousel-item + .carousel-item + .carousel-item {
+    position: relative;
+    transform: translate3d(-100%, 0, 0);
+    visibility: visible;
+  }
+  /* right or prev direction */
+  #carousel-example .carousel-item-prev.carousel-item-right + .carousel-item + .carousel-item + .carousel-item {
+    position: relative;
+    transform: translate3d(100%, 0, 0);
+    visibility: visible;
+    display: block;
+    visibility: visible;
+  }
+}
+/* LG */
+@media (min-width: 991px) {
+  /* show 4th item */
+  #carousel-example .carousel-inner .active + .carousel-item + .carousel-item + .carousel-item {
+      display: block;
+    }
+  #carousel-example .carousel-inner .carousel-item.active:not(.carousel-item-right):not(.carousel-item-left) + .carousel-item + .carousel-item + .carousel-item {
+    transition: none;
+  }
+  /* Show 5th slide on lg if col-lg-3 */
+  #carousel-example .carousel-inner .active.col-lg-3.carousel-item + .carousel-item + .carousel-item + .carousel-item + .carousel-item {
+    position: absolute;
+    top: 0;
+    right: -25%;  /*change this with javascript in the future*/
+    z-index: -1;
+    display: block;
+    visibility: visible;
+  }
+  /* left or forward direction */
+  #carousel-example .carousel-item-next.carousel-item-left + .carousel-item + .carousel-item + .carousel-item + .carousel-item {
+    position: relative;
+    transform: translate3d(-100%, 0, 0);
+    visibility: visible;
+  }
+  /* right or prev direction //t - previous slide direction last item animation fix */
+  #carousel-example .carousel-item-prev.carousel-item-right + .carousel-item + .carousel-item + .carousel-item + .carousel-item {
+    position: relative;
+    transform: translate3d(100%, 0, 0);
+    visibility: visible;
+    display: block;
+    visibility: visible;
+  }
 }
