--- a/wp-content/themes/nbaholics/assets/styles/core.scss
+++ b/wp-content/themes/nbaholics/assets/styles/core.scss
@@ -60,6 +60,9 @@ License: GNU General Public License v2 or later
 .logo{
   width: 50px;
 }
+.text-widget{
+  color: #303031;
+}
 .navbar-dark .navbar-nav .nav-link{
    color: #fff!important;
  }
